--- a/Services/appsettings.json
+++ b/Services/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniversidadCTX": "Server=localhost;User ID=sa;Password=*077_ooPs_bug;database=Universidad;TrustServerCertificate=true"
+    "UniversidadCTX": "Server=localhost;User ID=sa;Password=123456;database=Universidad;TrustServerCertificate=true"
   }
 }
